<resources>
    <string name="app_name">UMDEstoqueX</string>
    <string name="entrar">Entar</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="problemas">Relatar Problemas</string>
    <string name="app">Sobre o APP</string>
    <string name="title_activity_teste">TesteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>