<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="276dp"
        android:layout_height="142dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="275dp"
            android:layout_height="139dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logoprojeto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Usuario"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/cardview_default_elevation"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/txtSenha2"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Senha"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/cardview_default_radius"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="321dp"
        android:layout_height="69dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/entrar"
            app:backgroundTint="#4CAF50" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="333dp"
        android:layout_height="115dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cadastrar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/txtRelatar"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:clickable="true"
            android:gravity="center"
            android:inputType="textAutoComplete"
            android:text="@string/problemas"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/txtSobre"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:clickable="false"
            android:gravity="center"
            android:inputType="textAutoComplete"
            android:text="@string/app"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:typeface="normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>